Changed from SVG static images to animated gifs.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Talk to Kotaro</title>
@@ -118,9 +118,8 @@ width: 50%;
 	<script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
 	<script type="text/javascript" src="./static/recorder.js"></script></td>
 	<td>  <img id="avatar0" src="./static/IMG/Kotaro.svg" class="avatar">
-	<img id="avatar1" src="./static/IMG/Olho+BocaK.svg" class="avatar" style="display: none;">
-	<img id="avatar2" src="./static/IMG/OlhoK.svg" class="avatar" style="display: none;">
-	<img id="avatar3" src="./static/IMG/BocaK.svg" class="avatar" style="display: none;">
+ 	<img id="avatar1" src="./static/IMG/KotaroBlinker.gif" class="avatar" style="display: block;">
+	<img id="avatar2" src="./static/IMG/KotaroMouther.gif" class="avatar" style="display: none;">
 	</td>
 	<td><h1 style="color: green;">Robot Vision</h1>
 			<video autoplay="true" id="videoElement"></video>
